--- a/README.adoc
+++ b/README.adoc
@@ -185,9 +185,69 @@ image::img/connexion_BDD.png[]
 
 
 === Web
+==== En attente pour la Partie de Luca............
 
-==== Partie de Luca
+==== #Rendu final#
 
+===== Accueil
+----
+accessible par des visiteurs et des administrateurs.
+----
+image::img/Site_10.png[]
+
+image::img/Site_12.png[]
+
+****
+__Page d'inscriprion : __
+
+image::img/Site_7.png[]
+****
+
+****
+__Page de connexion : __
+
+image::img/Site_8.png[]
+****
+
+===== Détail
+image::img/Site_13.png[]
+----
+uniquement pour l'administrateur :
+----
+
+image::img/Site_14.png[]
+
+image::img/Site_1.png[]
+
+****
+__La liste des expériences pour les affecter à la cellule :__
+
+image::img/Site_2.png[]
+****
+
+===== Experiences
+
+
+image::img/Site_3.png[]
+****
+_Modifier une experience:_
+
+image::img/Site_9.png[]
+****
+****
+__Crée une experience:__
+
+image::img/Site_4.png[]
+****
+===== Utilisateurs
+
+image::img/Site_5.png[]
+
+****
+_Modifier le rôle ou le nom d'un utilisateur:_
+
+image::img/Site_6.png[]
+****
 === Bot Octopus:
 
 image::img/Octopus_bot.png[width=200, align=center]
